--- a/jenkinserver/build.gradle
+++ b/jenkinserver/build.gradle
@@ -3,4 +3,46 @@
  *
  * This is a general purpose Gradle build.
  * Learn more about Gradle by exploring our samples at https://docs.gradle.org/7.1.1/samples
- */
+
+plugins {
+    id 'base'
+    id 'com.palantir.docker' version '0.26.0'
+    id 'com.palantir.docker-run' version '0.26.0'
+    id 'pl.allegro.tech.build.axion-release' version '1.12.0'
+}
+
+project.version = scmVersion.version
+
+docker {
+    name "${project.name}:${project.version}"
+    files "plugins.txt", "seedJob.xml"
+}
+
+dockerRun {
+    name "${project.name}"
+    image "${project.name}:${project.version}"
+    ports '8080:8080'
+    clean true
+    daemonize false
+} */
+plugins {
+    id 'base'
+    id 'com.palantir.docker' version '0.26.0'
+    id 'com.palantir.docker-run' version '0.26.0'
+    id 'pl.allegro.tech.build.axion-release' version '1.12.0'
+}
+
+project.version = scmVersion.version
+
+docker {
+    name "${project.name}:${project.version}"
+    files "plugins.txt", "seedJob.xml"
+}
+
+dockerRun {
+    name "${project.name}"
+    image "${project.name}:${project.version}"
+    ports '8080:8080'
+    clean true
+    daemonize false
+}
