--- a/jenkinserver/build.gradle
+++ b/jenkinserver/build.gradle
@@ -13,32 +13,13 @@ plugins {
 
 project.version = scmVersion.version
 
+//To create the container image
 docker {
     name "${project.name}:${project.version}"
     files "plugins.txt", "seedJob.xml"
 }
 
-dockerRun {
-    name "${project.name}"
-    image "${project.name}:${project.version}"
-    ports '8080:8080'
-    clean true
-    daemonize false
-} */
-plugins {
-    id 'base'
-    id 'com.palantir.docker' version '0.26.0'
-    id 'com.palantir.docker-run' version '0.26.0'
-    id 'pl.allegro.tech.build.axion-release' version '1.12.0'
-}
-
-project.version = scmVersion.version
-
-docker {
-    name "${project.name}:${project.version}"
-    files "plugins.txt", "seedJob.xml"
-}
-
+//Running/deploying the container
 dockerRun {
     name "${project.name}"
     image "${project.name}:${project.version}"
