--- a/jenkinserver/build.gradle
+++ b/jenkinserver/build.gradle
@@ -13,13 +13,13 @@ plugins {
 
 project.version = scmVersion.version
 
-//To create the container image
+#To create the container image
 docker {
     name "${project.name}:${project.version}"
     files "plugins.txt", "seedJob.xml"
 }
 
-//Running/deploying the container
+#Running/deploying the container
 dockerRun {
     name "${project.name}"
     image "${project.name}:${project.version}"
